--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -127,6 +127,40 @@ main {
 }
 
 
+/* resume styles */
+
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+
+.resume .subtitle {
+    color: #757575;
+    margin-bottom: 20px;
+}
+
+.resume .description {
+    color: #757575;
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
+}
+
+
 /* what i do styles */
 
 .skill-container {
@@ -159,6 +193,3 @@ section {
 section img {
     width: 50px;
 }
-
-
-/* resume styles */
