--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -35,9 +35,9 @@ nav-title {
     color: #FFFFFF;
     font-weight: 700;
     border: 0;
-    padding: 18px 35px;
+    padding: 5px 20px;
     font-size: 20px;
-    height: 64px;
+    height: 54px;
     background: maroon;
     border-radius: 5px;
 }
@@ -48,7 +48,7 @@ nav-title {
     background-image: url(../header_bg.png), url(../developer.png);
     background-repeat: no-repeat;
     background-position: bottom right, left;
-    background-size: 100px 650px;
+    background-size: 600px, 100px 600px;
 }
 
 .banner {
@@ -99,7 +99,7 @@ main {
 
 .section-title {
     text-align: center;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
@@ -192,4 +192,35 @@ section {
 
 section img {
     width: 50px;
+}
+
+
+/* contact styles */
+
+.contact {
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 100px 100px;
+}
+
+.contact .section-title {
+    text-align: left;
+}
+
+.contact input[type="text"],
+input[type="email"],
+textarea {
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+.contact a {
+    text-decoration: none;
+}
+
+.contact img {
+    width: 30px;
 }
