--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -33,13 +33,24 @@ nav-title {
 
 .btn-maroon {
     color: #FFFFFF;
-    font-weight: 700;
+    font-weight: 400;
     border: 0;
-    padding: 5px 20px;
+    padding: 5px 30px;
     font-size: 20px;
     height: 54px;
     background: maroon;
     border-radius: 5px;
+}
+
+button {
+    color: maroon;
+    font-weight: 700;
+    padding: 5px 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    border-color: maroon;
+    margin-right: 20px;
+    height: 54px;
 }
 
 .header {
